Fixed IDs, implemented showing game description